--- a/index.html
+++ b/index.html
@@ -3,93 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Homepage</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title> Star Gadgets </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #e0f7fa;
+        }
+        .container {
+            margin-top: 20px;
+        }
+        .header {
+            text-align: center;
+            background-color: #00796b; /* Teal background */
+            color: white;
+            padding: 20px 0;
+            position: relative;
+            overflow: hidden;
+        }
+        .header h2 {
+            margin: 0;
+            font-size: 2.5em;
+            background-color: #ffeb3b; /* Yellow background for text */
+            display: inline-block;
+            padding: 0 20px;
+            animation: slideIn 5s linear infinite;
+        }
+        @keyframes slideIn {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+        .product {
+            background-color: #ffffff;
+            border: 1px solid #bdbdbd;
+            border-radius: 5px;
+            padding: 15px;
+            margin-bottom: 20px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            flex: 1;
+        }
+        .product:hover {
+            transform: scale(1.05);
+            background-color: #e0f2f1;
+        }
+        .product img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        .product label {
+            font-weight: bold;
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
+        .product input {
+            width: 80%;
+            margin: 0 auto;
+            margin-top: 10px;
+        }
+        .orders {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <div class="row header text-center">
-            <div class="col-12">
-                <h2>MOTOR SHOP</h2>
-                <p>By Clifford Jay Fernandez</p>
-                <hr class="hr" />
+        <div class="header">
+            <h2>STAR GADGETS</h2>
+            <p>TECH FOR YOU</p>
+            <hr class="hr">
+        </div>
+        <div class="row">
+            <div class="col-md-4 d-flex">
+                <div class="product flex-fill">
+                    <label id="product1">ROLEX</label>   
+                    <img src="rolex.png" class="img-thumbnail">
+                    <label id="price1">15000.00</label>
+                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
+                </div>
+            </div>
+            <div class="col-md-4 d-flex">
+                <div class="product flex-fill">
+                    <label id="product2">G-SHOCK</label>   
+                    <img src="gshock.png" class="img-thumbnail">
+                    <label id="price2">45000.00</label>
+                    <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
+                </div>
+            </div>
+            <div class="col-md-4 d-flex">
+                <div class="product flex-fill">
+                    <label id="product3">CASIO</label>   
+                    <img src="casio.png" class="img-thumbnail">
+                    <label id="price3">20000.00</label>
+                    <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
+                </div>
             </div>
         </div>
         <div class="row">
-            <!-- Product 1 -->
-            <div class="col-md-4 text-center product-card" id="p1">
-                <label id="product1">ROLEX</label>   
-                <div class="img-container">
-                    <img src="rolex.png" class="img-thumbnail"/>
+            <div class="col-md-4 d-flex">
+                <div class="product flex-fill">
+                    <label id="product4"SEIKO 5</label>   
+                    <img src="seiko.png" class="img-thumbnail">
+                    <label id="price4">7000.00</label>
+                    <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
-                <label id="price1">150.000.00</label>
-                <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
-            <!-- Product 2 -->
-            <div class="col-md-4 text-center product-card" id="p2">
-                <label id="product2">G-SHOCK</label>   
-                <div class="img-container">
-                    <img src="gshock.png" class="img-thumbnail"/>
+            <div class="col-md-4 d-flex">
+                <div class="product flex-fill">
+                    <label id="product5">TIMEX</label>   
+                    <img src="timex.png" class="img-thumbnail">
+                    <label id="price5">30000.00</label>
+                    <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
-                <label id="price2">70.000.00</label>
-                <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
-            <!-- Product 3 -->
-            <div class="col-md-4 text-center product-card" id="p3">
-                <label id="product3">CASIO</label>   
-                <div class="img-container">
-                    <img src="casio.png" class="img-thumbnail"/>
+            <div class="col-md-4 d-flex">
+                <div class="product flex-fill">
+                    <label id="product6">GARMIN</label>   
+                    <img src="garmin.png" class="img-thumbnail">
+                    <label id="price6">5000.00</label>
+                    <input type="number" class="form-control" id="qty6" placeholder="Enter quantity">
                 </div>
-                <label id="price3">150.000.00</label>
-                <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
-        </div>
-        <div class="row">
-            <!-- Product 4 -->
-            <div class="col-md-4 text-center product-card" id="p4">
-                <label id="product4">SEIKO 5</label>   
-                <div class="img-container">
-                    <img src="seiko.png" class="img-thumbnail"/>
-                </div>
-                <label id="price4">90.000.00</label>
-                <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
-            </div>
-            <!-- Product 5 -->
-            <div class="col-md-4 text-center product-card" id="p5">
-                <label id="product5">TIMEX</label>   
-                <div class="img-container">
-                    <img src="timex.png" class="img-thumbnail"/>
-                </div>
-                <label id="price5">100.000.00</label>
-                <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
-            </div>
-            <!-- Product 6 -->
-            <div class="col-md-4 text-center product-card" id="p6">
-                <label id="product6">GARMIN</label>   
-                <div class="img-container">
-                    <img src="garmin.png" class="img-thumbnail"/>
-                </div>
-                <label id="price6">90.000.00</label>
-                <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
-            </div>
-             <div class="col-6">
-                  <br><br>
-                    <label for="carts"> Orders </label<br>
-                    <textarea class="form-control" rows="29" id="carts" cols="200" style="height: 400px;"> </textarea>
-                  </div> 
-                  <div class="col-6">
-                    <br><br>
-                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
-                    <br>
-                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br><br>
-                   
-                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-                    <br>
-                    <button class="btn btn-primary" id="checkOut"> Check Out</button>
-                </div>
-                <hr><br><br><br><br>
+            <div class="row orders">
+            <div class="col-6 text-center">
+                <label for="carts">Orders</label><br>
+                <textarea class="form-control" rows="15" id="carts" cols="200" readonly></textarea><br>
+                <input type="text" class="form-control border-0" id="total" readonly placeholder="Total">
+                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/><br>
+                <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
             </div>
         </div>
-        <script src="js/index.js"></script>
-    </body>
+    </div>
+    <script src="app.js"></script>
+</body>
 </html>
