--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             }
         }
         .col-custom {
-            flex: 0 0 30%;
-            max-width: 30%;
+            flex: 0 0 16.6667%;
+            max-width: 16.6667%;
             padding: 10px; /* Increased padding to make columns look more substantial */
         }
         @media (max-width: 767px) {
@@ -99,8 +99,8 @@
             <p>TECH FOR YOU</p>
             <hr class="hr">
         </div>
-        <div class="row">
-            <div class="col-4 col-custom d-flex">
+        <div class="row justify-content-center">
+            <div class="col-2 col-custom d-flex">
                 <div class="product flex-fill">
                     <label id="product1">ROLEX</label>   
                     <img src="rolex.png" class="img-thumbnail">
@@ -108,7 +108,7 @@
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-4 col-custom d-flex">
+            <div class="col-2 col-custom d-flex">
                 <div class="product flex-fill">
                     <label id="product2">G-SHOCK</label>   
                     <img src="gshock.png" class="img-thumbnail">
@@ -116,7 +116,7 @@
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-4 col-custom d-flex">
+            <div class="col-2 col-custom d-flex">
                 <div class="product flex-fill">
                     <label id="product3">CASIO</label>   
                     <img src="casio.png" class="img-thumbnail">
@@ -124,7 +124,7 @@
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-4 col-custom d-flex">
+            <div class="col-2 col-custom d-flex">
                 <div class="product flex-fill">
                     <label id="product4">SEIKO 5</label>   
                     <img src="seiko.png" class="img-thumbnail">
@@ -132,7 +132,7 @@
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-4 col-custom d-flex">
+            <div class="col-2 col-custom d-flex">
                 <div class="product flex-fill">
                     <label id="product5">TIMEX</label>   
                     <img src="timex.png" class="img-thumbnail">
@@ -140,7 +140,7 @@
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
             </div>
-            <div class="col-4 col-custom d-flex">
+            <div class="col-2 col-custom d-flex">
                 <div class="product flex-fill">
                     <label id="product6">GARMIN</label>   
                     <img src="garmin.png" class="img-thumbnail">
@@ -162,5 +162,4 @@
     <script src="app.js"></script>
 </body>
 </html>
-
 
